Fixed up styling and spacing on artist block as well as artists container

--- a/src/style.css
+++ b/src/style.css
@@ -1,14 +1,44 @@
 .artists-container {
     width: 100%;
-    display: grid;
+    /* display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    gap: 20px; */
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: center;
     gap: 20px;
 }
 
-/* @media all and (max-width: ) */
+/* @media all and (max-width: 1060) {
+    .artists-container {
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media all and (max-width: 700) {
+    .artists-container {
+        display: flex;
+        flex-direction: column;
+    }
+} */
+
+.fa-03-block-edit {
+    width: 250px;
+    height: 250px;
+    border-radius: 15px;
+    overflow: hidden;
+    margin: 5px !important;
+}
+
+.fa-03-block-edit:focus {
+    outline: 3px solid #b7b7b7;
+    outline-offset: 2px;
+}
 
 .fa-03-image-container,
 .fa-03-edit-image-container {
+    box-sizing: border-box;
     width: 100%;
     aspect-ratio: 1;
     border-radius: var(--border-radius-md);
@@ -38,6 +68,26 @@
     margin: 0;
     background-color: var(--accent1);
     border-radius: var(--border-radius-sm);
+    color: #000000;
+}
+
+.artist-info a {
+    color: var(--primary);
+}
+
+.artist-info a:hover {
+    color: var(--secondary);
+}
+
+.artist-info-edit {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    z-index: 10;
+    padding: 4px 12px;
+    font-size: 1.5rem;
+    background-color: #ffffff;
+    border-radius: 5px;
     color: #000000;
 }
 
